(#32) fixed z-index values

--- a/default.theme/scss/laxar-details-layer-widget.scss
+++ b/default.theme/scss/laxar-details-layer-widget.scss
@@ -14,8 +14,8 @@
       height: 96vh;
       width: calc( 100vw - 4vh );
 
-      // get in front of bootstrap modal-backdrop
-      z-index: 61;
+      // get in front of modal-backdrop (z-index 1040) from theme
+      z-index: 1041;
       opacity: 1;
       background-color: white;
 
@@ -36,7 +36,6 @@
 
    .ax-details-layer-content {
       position: relative;
-      z-index: 1002;
       overflow-x: hidden;
       overflow-y: auto;
       top: 80px;
